# acc-man

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/app/: AboutWidget.h  AccountContainer.h  AccountWidget.h  Container.h  Encrypter.h  MainWindow.h  PlatformContainer.h  PlatformWidget.h
src/app/: AboutWidget.cpp  AccountContainer.cpp  AccountWidget.cpp  CMakeLists.txt  Container.cpp  Encrypter.cpp  MainWindow.cpp  PlatformContainer.cpp  PlatformWidget.cpp
